<resources>
    <string name="app_name">Ringtone</string>
    <string name="panel_url">ringtone.ristana.com</string>
    <string name="policy_privacy_url">http://ristana.com/privacy_policy.html</string>

    <string name="facebook_app_id">1030157120466186</string>
    <string name="fb_login_protocol_scheme">fb1030157120466186</string>

    <string name="ad_unit_id_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_unit_id_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="AD_MOB_TIME">15</string>
    <!-- enable / disbale banner -->
    <string name="AD_MOB_ENABLED_BANNER">true</string>
    <!-- enable / disbale interstitial -->
    <string name="AD_MOB_ENABLED_INTERSTITAL">true</string>
    <string name="DownloadFolder">/Download/Ringtone/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_server">Sorry something went wrong</string>
    <string name="try_again">Try agin</string>

    <string name="download">Download</string>
    <string name="set">Set</string>
    <string name="favorite">Favorite</string>
    <string name="comments">Comments</string>
    <string name="write_comment">Write a comment</string>
    <string name="operation_progress">Operation in progress</string>
    <string name="comment_hidden">This comment has been hidden</string>
    <string name="retry">RETRY</string>
    <string name="no_connexion">Connection problem</string>
    <string name="now_time">Now</string>
    <string name="ringtone_set_success">Ringtone has been set successfully </string>
    <string name="ringtone_notification_success">Ringtone has been set successfully as Notification</string>
    <string name="ringtone_alarm_success">Ringtone has been set successfully as Alarm</string>
    <string name="ringtone_contact_success">Ringtone has been set successfully for this contact</string>
    <string name="ringtone_download_success">Ringtone has been successfully downloaded</string>
    <string name="ringtone_download_error">Download failed -  network error</string>
    <string name="progress_login">Work in progress</string>
    <string name="message_sended">Message has been sent successfully</string>
    <string name="title_notification">Enable push notifiction</string>
    <string name="label_notification">Receive push notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="label_cache">Clear locally cached images. Currently : </string>
    <string name="update_now">Update Now</string>
    <string name="contact_us">Contact us</string>
    <string name="policy_privacy">Policy privacy</string>
    <string name="version_label">Current version</string>
    <string name="hint_message">Your message</string>
    <string name="send_support">Send Message</string>
    <string name="image_upload_error">Please select a ringtone</string>
    <string name="color_tags_upload_error">Please select tags</string>
    <string name="upload_ringtone">Upload ringtone</string>
    <string name="ringtone_upload_success">Your ringtone has been successfully uploaded</string>
    <string name="edit_text_upload_title_error">Title very short , please a write correct title</string>
    <string name="welcome_login_text">Login to comment , upload your ringtone ....</string>
    <string name="account_disabled">Sorry your account has been locked</string>
    <string name="login_gg_text">Login with google</string>
    <string name="message_logout">You are successfully logout</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_name">Full name</string>
    <string name="error_mail_valide">Please enter a valid E-mail</string>
    <string name="error_short_value">Your field is too short</string>
    <string name="exit">Exit</string>
    <string name="please_login">Please sign in !</string>
    <string name="action_rate">Rate this App</string>
    <string name="loading">Laoading</string>
    <string name="description_subsribte">With our pack. You can enjoy an ad-free experiance . and focus on the  essential!</string>
    <string name="title_upload">Upload Yours</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="set_notification">SET NOTIFICATION</string>
    <string name="set_contact_ringtone">SET CONTACT RINGTONE</string>
    <string name="title_ringtone">SET RINGTONE</string>
    <string name="categories">Categories : </string>
    <string name="tags">Tags : </string>
    <string name="description">Description :</string>
    <string name="categories_list">Categories list</string>
    <string name="popular_searches">Popular Searches</string>
    <string name="download_ringtone_from">Download it from :</string>
    <string name="title_slide_1">Welcome to Ringtone App</string>
    <string name="description_slide_1">Thank you for downloading Ringtone App we hope you like it , enjoy .</string>
    <string name="title_slide_2">We are using Tags</string>
    <string name="description_slide_2">Select your favorite themes to find your the best Ringtones</string>
    <string name="title_slide_3">Be an Author</string>
    <string name="description_slide_3">Sign in and be one of our community and share your best ringtones with others</string>
    <string name="title_slide_4" >Download ringtones Download </string>

    <string name="description_slide_4">ringtone and keep it on your phone , share and use it when you want</string>
    <string name="title_slide_5">Favorites</string>
    <string name="description_slide_5">Add your favorites ringtones to your favorite list and use it later</string>
    <string name="title_slide_6">Rate Ringtones</string>
    <string name="description_slide_6">Browse best ringtones collection  and give your rating</string>
    <string name="title_slide_7">EASY TO SHARE</string>
    <string name="description_slide_7">Download and share any ringtone from the application to any social network</string>
    <string name="title_slide_8">Remove ads</string>
    <string name="description_slide_8">Go PRO and enjoy with apps without any ads ,with a small price .</string>
    <string name="report_ringtone">Report this Ringtone</string>
    <string name="skip">Skip</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="rate_our_app_message">If you love our application ,please take a moment to rate it .</string>
    <string name="rate_now">Rate Now</string>
    <string name="later">Later</string>
    <string name="no_again">Don’t ask again</string>

    <array name="colors_load">
        <item>@color/colorPrimaryDark</item>
        <item>@color/colorPrimaryDark</item>
    </array>
</resources>
