<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_bottom_settings"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginRight="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:padding="2dp"
                        android:textColor="@color/primary_text"
                        android:gravity="center|left"
                        android:text="@string/title_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:padding="2dp"
                        android:textSize="14dp"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:text="@string/label_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Switch
                    android:checked="true"
                    android:id="@+id/switch_button_notification"
                    android:gravity="center_vertical"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/border_bottom_settings"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/linear_layout_clea_cache"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:layout_marginRight="0dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <TextView
                        android:textSize="18dp"
                        android:padding="2dp"
                        android:textColor="@color/primary_text"
                        android:gravity="center|left"
                        android:text="@string/clear_cache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/text_view_cache_value"
                        android:padding="2dp"
                        android:textSize="14dp"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:text="@string/label_cache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/border_bottom_settings"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/linearLayout_policy_privacy"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:layout_marginRight="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:padding="2dp"
                        android:textColor="@color/primary_text"
                        android:gravity="center|left"
                        android:text="@string/policy_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout

                android:background="@drawable/border_bottom_settings"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/linearLayout_contact_us"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:padding="2dp"
                        android:textColor="@color/primary_text"
                        android:gravity="center|left"
                        android:text="@string/contact_us"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_bottom_settings"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginRight="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:padding="2dp"
                        android:textColor="@color/primary_text"
                        android:gravity="center|left"
                        android:text="@string/version_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text_view_version"
                    android:textSize="14dp"
                    android:padding="2dp"
                    android:textAlignment="center"
                    android:text="V 1.2"
                    android:gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="visible"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/ad_unit_id_banner" />

</RelativeLayout>
