<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SupportActivity"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_email"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/imageView" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView">
        <LinearLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/support_input_layout_email"
                android:theme="@style/textview_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/support_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/support_input_layout_name"
                android:layout_width="match_parent"
                android:theme="@style/textview_login"

                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/support_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/support_input_layout_message"
                android:layout_width="match_parent"
                android:theme="@style/textview_login"
                android:layout_height="wrap_content">

                <EditText
                    android:gravity="top"
                    android:lines="4"
                    android:id="@+id/support_input_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_message" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/support_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        app:elevation="6dp"
        app:borderWidth="1dp"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_send" />
</RelativeLayout>
